src/app/globals.css
@import "tailwindcss";
@import "react-phone-number-input/style.css";

@theme inline {
  --breakpoint-xs: 27rem;

  --color-black: #000000;
  --color-white: #ffffff;
  --color-grey: #bebebe;
  --color-grey-dark: #333333;
  --color-brown: #603208;
  --color-gradient-brown: #b86d29;
  --color-gradient-brown-dark: #6d3a0b;
  --color-beige: #ffc189;
  --color-red-error: #b3261e;

  --font-montserrat: var(--font-montserrat), sans-serif;
  --font-find-sans-pro: var(--font-find-sans-pro), sans-serif;
}

@layer base {
  :root:has(.no-doc-scroll) {
    overflow: hidden;
    scrollbar-gutter: stable;
  }

  html,
  body {
    max-width: 100vw;
    overflow-x: hidden;
  }

  body {
    background: var(--color-black);
    color: var(--color-white);
    font-family: var(--font-montserrat), Arial, Helvetica, sans-serif;
  }

  a {
    text-decoration: none;
    color: inherit;
  }

  img {
    display: block;
    max-width: 100%;
  }

  ul {
    list-style: none;
  }

  *,
  *::after,
  *::before {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
  }
}
/* ... */

